--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,109 @@ body {
 }
 
 .main-container {
-  background-image: url("../../public/back-mobile.jpg");
+  background-image: url("../../public/mobile-web.jpg");
   background-size: cover;
+}
+
+.main-co {
+  background-image: url("../../public/descarg.jpeg");
+  background-size: cover;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.9;
+  }
+}
+.animate-custom-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes ping {
+  0% {
+      width: 101%;
+      position: absolute;
+  }
+  100% {
+    width: 91%;
+    position: absolute;
+}
+}
+.animate-custom-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+h1 {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  color: #a3a3a3;
+  font-weight: 500;
+}
+
+.slider{
+  position: relative;
+  height: 2rem;
+  width: 150px;
+  overflow: hidden;
+  margin-left: 12px;
+}
+
+.slider__word {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 1em;
+  transform: translateY(100%);
+  animation: slide 5s linear infinite;
+}
+
+.slider__word:nth-child(2) {
+  animation-delay: 1.66s;
+}
+
+.slider__word:nth-child(3) {
+  animation-delay: 3.3s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(100%);
+    opacity: 0.1;
+  }
+  15% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  45% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100%);
+    opacity: 0.1;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+.sombra-interior {
+  box-shadow: 1px 10px 20px 5px rgb(0, 0, 0) inset;
 }
